# RustySpy

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: args.rs  error.rs  logger.rs  main.rs
src/DNSExfiltrator/: dns_exfiltrator.rs
src/dns_exfiltrator/: mod.rs
src/edr_silencer/: mod.rs
src/uia/: event_handler.rs  mod.rs
src/uia/handlers/: chrome.rs  common.rs  explorer.rs  firefox.rs  keepass.rs  mod.rs
