[package]
name = "rustyspy"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A DNS exfiltration tool written in Rust"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.4", features = ["derive"] }
data-encoding = "2.5"
env_logger = "0.11.6"
flate2 = "1.0"
log = "0.4"
thiserror = "2.0.11"
windows = { version = "0.52.0", features = ["Win32_UI_Accessibility", "Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_System_ProcessStatus", "Win32_NetworkManagement_WindowsFilteringPlatform"] }
generic-array = "1.2.0"
chrono = "0.4"
aes = "0.8"
ctr = "0.9"
rand = "0.8"

[dev-dependencies]
tempfile = "3.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
